--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ repositories {
 }
 
 dependencies {
-  testCompile 'com.licel:jcardsim:2.2.2'
+  testCompile("com.licel:jcardsim:2.2.2")
+  testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0")
+  testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
 }
 
 sourceCompatibility = 1.3
@@ -35,4 +37,9 @@ targetCompatibility = 1.3
 
 task wrapper(type: Wrapper) {
   gradleVersion = '2.10'
+}
+
+compileTestJava {
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
 }
