--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
   dependencies {
     classpath 'com.fidesmo:gradle-javacard:0.2.7'
-    classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+    classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.1'
   }
 }
 
@@ -36,8 +36,8 @@ dependencies {
   testCompile('org.web3j:core:2.3.1')
   testCompile('org.bitcoinj:bitcoinj-core:0.14.5')
   testCompile("org.bouncycastle:bcprov-jdk15on:1.58")
-  testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0")
-  testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
+  testCompile("org.junit.jupiter:junit-jupiter-api:5.1.1")
+  testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.1")
 }
 
 junitPlatform {
@@ -48,11 +48,8 @@ junitPlatform {
   }
 }
 
-sourceCompatibility = 1.3
-targetCompatibility = 1.3
-
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.10'
+  gradleVersion = '4.7'
 }
 
 task install(type: Exec) {
@@ -76,6 +73,11 @@ task install(type: Exec) {
 if (project.properties['im.status.wallet.test.simulated'] != 'true') {
   tasks.install.dependsOn(convertJavacard)
   tasks.test.dependsOn(install)
+}
+
+compileJava {
+  sourceCompatibility = 1.6
+  targetCompatibility = 1.6
 }
 
 compileTestJava {
