--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ javacard {
       aid = '0x53:0x74:0x61:0x74:0x75:0x73:0x57:0x61:0x6c:0x6c:0x65:0x74:0x41:0x70:0x70'
       className = 'WalletApplet'
     }
+    applet {
+      aid = '0x53:0x74:0x61:0x74:0x75:0x73:0x57:0x61:0x6c:0x6c:0x65:0x74:0x4e:0x46:0x43'
+      className = 'NDEFApplet'
+    }
     version = '1.2'
   }
 }
@@ -64,6 +68,7 @@ task install(type: Exec) {
   install_for_load -pkgAID 53746174757357616C6C6574
   load -file build/javacard/im/status/wallet/javacard/wallet.cap
   send_apdu -sc 1 -APDU 80E60C005F0C53746174757357616C6C65740F53746174757357616C6C65744170700F53746174757357616C6C657441707001002EC92C313233343536373839303132e929d425d7f73c2a0a24ffefad87b65e9b2ee96603eab34d64088b5aae2a026f00
+  install_for_install -AID 53746174757357616C6C65744e4643 -pkgAID 53746174757357616C6C6574 -instAID D2760000850101
   card_disconnect
   release_context
   """
