test GET DATA + STORE DATA

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ javacard {
       className = 'NDEFApplet'
     }
     
-    version = '2.2'
+    version = '2.3'
   }
 }
 
@@ -54,7 +54,7 @@ dependencies {
   testCompile(files("../jcardsim/jcardsim-3.0.5-SNAPSHOT.jar"))
   testCompile('org.web3j:core:2.3.1')
   testCompile('org.bitcoinj:bitcoinj-core:0.14.5')
-  testCompile('com.github.status-im.status-keycard-java:desktop:2.2.1')
+  testCompile('com.github.status-im.status-keycard-java:desktop:5771994')
   testCompile('org.bouncycastle:bcprov-jdk15on:1.60')
   testCompile("org.junit.jupiter:junit-jupiter-api:5.1.1")
   testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.1")
