--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ repositories {
 }
 
 dependencies {
-  testCompile(files("../jcardsim/jcardsim-3.0.5-SNAPSHOT.jar"))
+  testCompile(files("dependencies/jcardsim/jcardsim-3.0.5-SNAPSHOT.jar"))
   testCompile('org.web3j:core:2.3.1')
   testCompile('org.bitcoinj:bitcoinj-core:0.14.5')
   testCompile('com.github.status-im.status-keycard-java:desktop:2.2.1')
