--- a/circle.yml
+++ b/circle.yml
@@ -1,20 +1,41 @@
+# Java Gradle CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:8-jdk
 
-machine:
-  java:
-    version: oraclejdk8
+    working_directory: ~/repo
 
-test:
-  override:
-    - cp gradle.circleci.properties gradle.properties
-    - ./gradlew convertJavacard
-    - ./gradlew test
-  post:
-    - mkdir $CIRCLE_ARTIFACTS/cap
-    - mv build/javacard/im/status/keycard/javacard/*.cap $CIRCLE_ARTIFACTS/cap
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
 
-dependencies:
-  pre:
-    - git submodule update --init --recursive
-  cache_directories:
-    - ~/.m2
-    - ~/.gradle
+    steps:
+      - checkout
+      - run:
+          name: "Pull Submodules"
+          command: git submodule update --init --recursive
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          - cp gradle.circleci.properties gradle.properties
+          - ./gradlew convertJavacard
+
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
+
+      # run tests!
+      - run: gradle test
