test-harness: gradle fixes applied for gplus tests

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
   dependencies {
     classpath 'com.fidesmo:gradle-javacard:0.2.7'
     classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.1'
-    classpath 'com.github.status-im.status-keycard-java:desktop:2.0.0'
+    classpath 'com.github.gridplus.safe-card-java-sdk:desktop:bcfe0b5'
+    // classpath 'com.github.status-im.status-keycard-java:desktop:5771994'
   }
 }
 
@@ -54,7 +55,8 @@ dependencies {
   testCompile(files("../jcardsim/jcardsim-3.0.5-SNAPSHOT.jar"))
   testCompile('org.web3j:core:2.3.1')
   testCompile('org.bitcoinj:bitcoinj-core:0.14.5')
-  testCompile('com.github.status-im.status-keycard-java:desktop:5771994')
+  // testCompile('com.github.status-im.status-keycard-java:desktop:5771994')
+  testCompile('com.github.gridplus.safe-card-java-sdk:desktop:bcfe0b5')
   testCompile('org.bouncycastle:bcprov-jdk15on:1.60')
   testCompile("org.junit.jupiter:junit-jupiter-api:5.1.1")
   testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.1")
