--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -4,5 +4,5 @@ repositories {
 }
 
 dependencies {
-  compile 'com.github.status-im.status-keycard-java:desktop:2.2.1'
+  compile 'com.github.gridplus.safe-card-java-sdk:desktop:bcfe0b5'
 }
