--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,10 @@ javacard {
       aid = '0xA0:0x00:0x00:0x08:0x04:0x00:0x01:0x02'
       className = 'NDEFApplet'
     }
-    
+    applet {
+      aid = '0xA0:0x00:0x00:0x08:0x04:0x00:0x01:0x03'
+      className = 'CashApplet'
+    }
     version = '2.3'
   }
 }
