--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
   dependencies {
     classpath 'com.fidesmo:gradle-javacard:0.2.7'
-    classpath 'com.github.status-im.status-keycard-java:desktop:3.0.4'
+    classpath 'com.github.status-im.status-keycard-java:desktop:953c845'
   }
 }
 
@@ -30,6 +30,10 @@ javacard {
     applet {
       aid = '0xA0:0x00:0x00:0x08:0x04:0x00:0x01:0x03'
       className = 'CashApplet'
+    }
+    applet {
+      aid = '0xA0:0x00:0x00:0x08:0x04:0x00:0x01:0x04'
+      className = 'IdentApplet'
     }
     version = '3.1'
   }
@@ -55,7 +59,7 @@ dependencies {
   testCompile(files("../jcardsim/jcardsim-3.0.5-SNAPSHOT.jar"))
   testCompile('org.web3j:core:2.3.1')
   testCompile('org.bitcoinj:bitcoinj-core:0.14.5')
-  testCompile('com.github.status-im.status-keycard-java:desktop:3.0.4')
+  testCompile('com.github.status-im.status-keycard-java:desktop:953c845')
   testCompile('org.bouncycastle:bcprov-jdk15on:1.65')
   testCompile("org.junit.jupiter:junit-jupiter-api:5.1.1")
   testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.1")
