--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -4,5 +4,5 @@ repositories {
 }
 
 dependencies {
-  compile 'com.github.status-im.status-keycard-java:desktop:15a61e1'
+  compile 'com.github.status-im.status-keycard-java:desktop:3.1.2'
 }
